--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     ".": "./dist/index.js",
     "./models": "./dist/models/index.js"
   },
+  "types": [
+    "dist/index.d.ts",
+    "dist/models/index.d.ts"
+  ],
   "scripts": {
     "build": "rm -rf dist/* && tsc && mkdir dist/templates && cp src/templates/* dist/templates/"
   },
