--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist/* && tsc && mkdir dist/templates && cp src/templates/* dist/templates/",
+    "build": "rm -rf dist/* && tsc",
     "pack": "npm run build && npm pack"
   },
   "dependencies": {
