--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proto",
   "version": "1.0.0",
-  "description": "Generate UI prototypes with hyperspeed.",
+  "description": "Generate application prototypes with hyperspeed.",
   "author": "Stephen Ullom",
   "bin": {
     "proto": "dist/scripts/cli.js"
@@ -13,10 +13,9 @@
     "pack": "npm run build && npm pack"
   },
   "dependencies": {
-    "typescript": "^5.0.4",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@types/node": "^20.1.0"
+    "@types/node": "^18.16.12"
   }
 }
