--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pack": "npm run build && npm pack"
   },
   "dependencies": {
+    "typescript": "^5.0.4",
     "ws": "^8.13.0"
   },
   "devDependencies": {
