--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "name": "proto",
   "version": "1.0.0",
-  "description": "Generate application prototypes with hyperspeed.",
   "author": "Stephen Ullom",
-  "bin": {
-    "proto": "dist/scripts/cli.js"
-  },
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "bin": {
+    "proto": "dist/index.js"
+  },
+  "description": "Generate application prototypes with hyperspeed.",
+  "engines": {
+    "bun": "1.0"
+  },
   "scripts": {
-    "build": "rm -rf dist/* && tsc",
+    "build": "rm -rf dist/* && bun build ./src/index.ts --outdir=dist",
     "pack": "npm run build && npm pack"
   },
-  "dependencies": {
-    "typescript": "^5.0.4",
-    "ws": "^8.13.0"
-  },
+  "types": "dist/index.d.ts",
   "devDependencies": {
-    "@types/node": "^18.16.12",
-    "@types/ws": "^8.5.4"
+    "@types/bun": "^1.0.3"
   }
 }
